jlamontSC-test/src/objects/Attribute__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Type__c</fullName>
        <label>Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Effort Type</fullName>
                </value>
                <value>
                    <fullName>GL Department</fullName>
                </value>
                <value>
                    <fullName>GL Product</fullName>
                </value>
                <value>
                    <fullName>Interaction Type</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Segment Group</fullName>
                </value>
                <value>
                    <fullName>Sublist</fullName>
                </value>
                <value>
                    <fullName>Test Panel</fullName>
                </value>
                <value>
                    <fullName>Test Type</fullName>
                </value>
                <value>
                    <fullName>Theme</fullName>
                </value>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Promotion Campaign Attribute</label>
    <listViews>
        <fullName>All_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Attributes</label>
    </listViews>
    <listViews>
        <fullName>Channel_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Channel</value>
        </filters>
        <label>Channel Attributes</label>
    </listViews>
    <listViews>
        <fullName>Effort_Type_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Effort Type</value>
        </filters>
        <label>Effort Type Attributes</label>
    </listViews>
    <listViews>
        <fullName>GL_Department_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>GL Department</value>
        </filters>
        <label>GL Department Attributes</label>
    </listViews>
    <listViews>
        <fullName>GL_Product_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>GL Product</value>
        </filters>
        <label>GL Product Attributes</label>
    </listViews>
    <listViews>
        <fullName>Interaction_Type_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Interaction Type</value>
        </filters>
        <label>Interaction Type Attributes</label>
    </listViews>
    <listViews>
        <fullName>List_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>List</value>
        </filters>
        <label>List Attributes</label>
    </listViews>
    <listViews>
        <fullName>Program_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Program</value>
        </filters>
        <label>Program Attributes</label>
    </listViews>
    <listViews>
        <fullName>Segment_Group_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Segment Group</value>
        </filters>
        <label>Segment Group Attributes</label>
    </listViews>
    <listViews>
        <fullName>Sublist_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Sublist</value>
        </filters>
        <label>Sublist Attributes</label>
    </listViews>
    <listViews>
        <fullName>Test_Panel_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Test Panel</value>
        </filters>
        <label>Test Panel Attributes</label>
    </listViews>
    <listViews>
        <fullName>Test_Type_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Test Type</value>
        </filters>
        <label>Test Type Attributes</label>
    </listViews>
    <listViews>
        <fullName>Theme_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Theme</value>
        </filters>
        <label>Theme Attributes</label>
    </listViews>
    <listViews>
        <fullName>Vehicle_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Vehicle</value>
        </filters>
        <label>Vehicle Attributes</label>
    </listViews>
    <listViews>
        <fullName>Vendor_Attributes</fullName>
        <columns>Attribute_Type__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Type__c</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filters>
        <label>Vendor Attributes</label>
    </listViews>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotion Campaign Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>